# carla_testbench

./: .gitignore  CMakeLists.txt  package.xml
config/: objects.json  path.csv
launch/: carla_ros_bridge.yml  destroy_cones.py  isaac_image_proc.launch.py  isaac_stereo_image_proc.launch.py  isaac_stereo_image_proc.launch.yml  isaac_stereo_image_proc_minimal.launch.yml  spawn_cones.py  spawn_vehicle.yml  start.launch.py  start.launch.yml  stereo_image_proc.launch.yml
notebook/: Untitled.ipynb
params/: nav2_params.yaml  slam_toolbox.yaml
scripts/: sliding_modes.py
