<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>carla_testbench</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="gmsie@todo.todo">gmsie</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>carla_ros_bridge</exec_depend>
  <exec_depend>isaac_ros_common</exec_depend>
  <exec_depend>isaac_ros_stereo_image_proc</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
